--- a/index.html
+++ b/index.html
@@ -496,6 +496,7 @@
 			align-items: center;           /* Alinea verticalmente al centro */
 			border: 1px solid #ccc;        /* Solo para visualizar el contenedor */
 			padding: 1px;
+			height: 10%;
 		}
 		.contenedoralineado p {
 			margin: 0; /* Elimina márgenes por defecto */
